# webserver

client/: myhead.h
newserver/: Makefile  Makefile.am  Makefile.bak  base.h  config.c  config.h  configure.in  decode.c  decode.h  http.c  http_str.h  listen.c  listen.h  log.c  log.h  network.c  network.h  response.c  response.h  server.c  server.xml  unix_sock.c  work.c  work.h
newserver/etc/: server.xsd
